...
            inputContainer={{width: '86%'}}
            placeholder="Search Name"
            value={searchedCharacter}
            onChangeText={val => setSearchedCharacter(val)}
          />
          <TouchableOpacity
            testID="filter"
            onPress={() => RBSheetRef?.current?.open()}
            style={styles.filterContainer}>
            <Image source={images.FILTER} style={styles.filter} />
          </TouchableOpacity>
        </View>
        {isLoading ? (
...
            padding: 20,
            borderRadius: 20,
          },
        }}>
        <View>
          <TouchableOpacity
            testID="selectSeason"
            onPress={() => setShowSeasonList(!showSeasonList)}
            style={styles.dropdown}>
            <Text
              style={{color: season.length === 0 ? colors.Gray : colors.Black}}>
              {season.length === 0 ? 'Select Season' : season}
            </Text>
...
